// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Button should render default 1`] = `
<TextButton
  color="white"
  emphasis="high"
  fontWeight="bold"
  onPress={[MockFunction]}
  style={
    Object {
      "borderRadius": 5,
      "paddingBottom": 8,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 8,
    }
  }
  upperCase={true}
  variant="button"
>
  test
</TextButton>
`;

exports[`(Component) Button should render primary 1`] = `
<TextButton
  color="white"
  emphasis="high"
  fontWeight="bold"
  onPress={[MockFunction]}
  style={
    Object {
      "backgroundColor": "#FB9B42",
      "borderRadius": 5,
      "paddingBottom": 8,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 8,
    }
  }
  upperCase={true}
  variant="button"
>
  test
</TextButton>
`;
